Création d'un carnet de contact (under dev)
Le but du carnet d’adresse est de permettre à l’utilisateur de saisir les informations d’un contact et ensuite de les afficher dans une liste avec la possibilité de voir les détails du contact, mais également de le modifier.

--- a/Carnet de contacts/css/style.css
+++ b/Carnet de contacts/css/style.css
@@ -1,16 +1,10 @@
-header{
-    font-size: 2em;
-    margin: 50px;
-}
-
-header div{
-    margin-top: 25px;
+main, header{
+    background-color: rgb(255, 245, 198);
 }
 
 main form ul>li{
     list-style: none;
     color: rgb(82, 149, 175);
-    /* text-align: initial; */
 }
 
 form ul li>label{
@@ -19,7 +13,10 @@ form ul li>label{
     font-weight: bold;
 }
 
-.hide {
-    display:none;
+header{
+    margin-bottom: -8px;
 }
 
+main{
+    height: 80vh;
+}
